# OfroPack

./: .editorconfig  .gitignore  AGENTS.md  Cargo.toml  GITHUB_ACTIONS.md  README.md  gallery.html  index.html  items_textures.json  model.html  pack.mcmeta
.github/: CODEOWNERS  PAGES_SETUP.md
.github/ISSUE_TEMPLATE/: add_model.yml  add_model3d.yml  custom-model.yml  extend-model.yml
.github/workflows/: add-custom-model-from-issue.yml  add-custom-model.yml  add-model-from-issue.yml  add-model3d-from-issue.yml  deploy-pages.yml  extend-model-from-issue.yml  reusable-process-issue.yml
src/: cli.rs  config.rs  constants.rs  file_utils.rs  gallery.rs  image_validator.rs  lib.rs  main.rs  models.rs  paths.rs  processing.rs  processor.rs  validation.rs
src/cmd/: add.rs  cmd.rs  extend.rs  gallery.rs  generates.rs  metadata.rs  mod.rs  models.rs  zip.rs
src/cmd/add/: mod.rs  (+2 more)
src/domain/: animation.rs  mod.rs  model.rs  texture.rs
src/infra/: fs.rs  git.rs  mod.rs
src/pipeline/: github_client.rs  image_downloader.rs  image_validator.rs  mod.rs  pr_creator.rs  preview_generator.rs
src/runner/: github_client.rs  image_downloader.rs  issue_parser.rs  mod.rs  preview_generator.rs  process_issue.rs
src/schema/: animation.rs  items.rs  mod.rs  models.rs
src/services/: gallery.rs  item_manager.rs  mod.rs  processor.rs
src/types/: github.rs  issue.rs  item_model.rs  mod.rs
src/utils/: add.rs  constcat.rs  json.rs  materials.rs  mod.rs
web/: .env.example  .gitignore  eslint.config.js  package.json  svelte.config.js  vite.config.ts
web/src/: app.css  app.html
(+60 files in other folders)
