[package]
name = "processor"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "processor"
path = "src/main.rs"

[lib]
name = "processor"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
anyhow = "1.0"
clap = { version = "4.5.4", features = ["derive"] }
image = "0.25"
chrono = "0.4"
regex = "1.10"
ureq = { version = "3.1.2", features = ["json"] }

[dev-dependencies]
tempfile = "3.8"
