[package]
name = "processor"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
thiserror = "2.0"
anyhow = "1.0"
clap = { version = "4.5.4", features = ["derive"] }
image = { version = "0.25.8", default-features = false, features = ["png"] }
chrono = "0.4"
regex = "1.10"
ureq = { version = "3.1.2", default-features = false, features = [
  "json",
  "rustls",
] }

[dev-dependencies]
tempfile = "3.8"
